remove OD4Data